<resources>

    <!-- START Activity names -->
    <string name="title_activity_main">Quotes</string>
    <string name="title_activity_about">About app</string>
    <!-- END Activity names -->

    <!-- START Action buttons -->
    <string name="action_favorites">Favorites</string>
    <string name="action_about">About app</string>
    <string name="action_famous_quotes">Famous Quotes</string>
    <string name="action_movie_quotes">Movie Quotes</string>
    <string name="action_delete_quotes">Delete all quotes</string>
    <!-- END Action buttons -->

    <!-- START About app titles and text -->
    <string name="about_app_title">About App</string>
    <string name="about_app">This app uses two APIs from Mashape. Mashape makes it easy to distribute and consume cloud APIs.
        They are also building a world-class marketplace for cloud APIs, driven by a passionate community of developers from all over the world.</string>

    <string name="about_codepub_title">The code pub</string>
    <string name="about_codepub">THE CODE PUB is a meet-up for women who want to learn more about IT and open for beginners as well as professionals.
    Our goal is to create a platform where one can BE INSPIRED and INSPIRE OTHERS while BECOMING A BETTER DEVELOPER.</string>

    <string name="about_app_how_did_it_start_title">How did the codepub start?</string>
    <string name="about_app_how_did_it_start">The Code Pub was created by Netlight in the spring of 2013 with the purpose of increasing the number of women in the IT industry.
        By lowering the threshold for getting started with programming and highlighting female role models within IT, we believe that we can make a difference.
        In order to have a bigger impact on the entire industry we work together with other cool IT companies and they will be hosting occasional Code Pub meet-ups.</string>
    <string name="about_app_sharing_is_caring_title">FOR COMPANIES - Sharing is caring</string>
    <string name="about_app_sharing_is_caring">If your company would like to host a the Code Pub-meetup, just send an e-mail to thecodepub@netlight.com to get more information.
        The more people we are who are working with improving gender equality in the IT industry, the bigger the impact will be.</string>
    <!-- END About app titles and text -->

    <!-- START Various -->
    <string name="like">Like</string>
    <string name="yodafy">Yodafy</string>
    <string name="dislike">Dislike</string>
    <string name="retry">Try again</string>
    <string name="no_data">No data</string>
    <string name="retry_message">Something went wrong, try again</string>
    <string name="save_as_favorite">Quote saved as favorite!</string>
    <string name="star_wars">Star Wars</string>
    <string name="yoda">Grand Jedi Master Yoda</string>
    <string name="quotes_deleted">All quotes has been deleted</string>
    <string name="dialog_delete_text">This action will delete all your favorite quotes. Are you sure you want to do that?</string>
    <string name="caution">Caution</string>
    <string name="no_favorites">You have no favorites yet</string>
    <!-- END Various -->

</resources>
