<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/margin_l"
        android:paddingRight="@dimen/margin_l"
        android:paddingTop="@dimen/margin_l"
        android:paddingBottom="@dimen/margin_l"
        android:orientation="vertical"
        tools:context="com.netlight.quotes.app.view.about.AboutActivity">

        <TextView
            style="@style/AboutAppTitle"
            android:text="@string/about_app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/AboutAppText"
            android:text="@string/about_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/AboutAppTitle"
            android:text="@string/about_codepub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/AboutAppText"
            android:text="@string/about_codepub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/AboutAppTitle"
            android:text="@string/about_app_how_did_it_start_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/AboutAppText"
            android:text="@string/about_app_how_did_it_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/AboutAppTitle"
            android:text="@string/about_app_sharing_is_caring_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/AboutAppText"
            android:text="@string/about_app_sharing_is_caring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>