<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_movie_quotes"
        android:title="@string/action_movie_quotes"
        android:orderInCategory="1"
        app:showAsAction="never" />

    <item android:id="@+id/action_famous_quotes"
        android:title="@string/action_famous_quotes"
        android:orderInCategory="2"
        app:showAsAction="never" />

    <item android:id="@+id/action_favorites"
        android:title="@string/action_favorites"
        android:orderInCategory="3"
        app:showAsAction="never" />

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="4"
        app:showAsAction="never" />
</menu>
